tests/ui/half-open-range-patterns/exclusive_range_pattern_syntax_collision.stderr
error[E0308]: mismatched types
  --> $DIR/exclusive_range_pattern_syntax_collision.rs:5:13
   |
LL |     match [5..4, 99..105, 43..44] {
   |           ----------------------- this expression has type `[std::ops::Range<{integer}>; 3]`
LL |         [_, 99.., _] => {},
   |             ^^ expected `Range<{integer}>`, found integer
   |
   = note: expected struct `std::ops::Range<{integer}>`
                found type `{integer}`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
